--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/bootstrap.css">
   <title>路由测试</title>
+  <style>
+    .atguigu{
+      background: orange !important;
+      color:white !important;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
